fixed background color gradient and letter spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@
   --grey-950: hsl(216, 12%, 8%);
 
   --transition: 280ms ease-in-out;
+  --radial-gradient: closest-corner, hsl(215, 20%, 17%) 0%,
+    hsl(216, 24%, 12%) 100%;
 }
 
 body {
@@ -57,7 +59,7 @@ button {
 
 .card {
   padding: 1.5rem;
-  background: radial-gradient(var(--grey-900), var(--grey-950));
+  background: radial-gradient(var(--radial-gradient));
   border-radius: 1rem;
 }
 
@@ -157,6 +159,7 @@ fieldset li label:hover {
   font-weight: 700;
   color: var(--grey-950);
   text-transform: uppercase;
+  letter-spacing: 2px;
 
   transition: background var(--transition);
 }
